fixed spacing issues on footer

--- a/learning_journal_basic/static/css/bootstrap.css
+++ b/learning_journal_basic/static/css/bootstrap.css
@@ -5688,8 +5688,8 @@ a.list-group-item-danger.active:focus {
 .well1 {
   min-height: 20px;
   min-width: 500px;
-  margin-left: 30%;
-  margin-right: 30%;
+  margin-left: 5%;
+  margin-right: 5%;
   margin-bottom: 20px;
   background-color: #f5f5f5;
   border: 1px solid #e3e3e3;
