--- a/learning_journal_basic/static/css/style.css
+++ b/learning_journal_basic/static/css/style.css
@@ -720,6 +720,8 @@ ul.navig li a.active{
 	padding:2em 0px;
 	box-shadow: 0px 1px 9px 1px rgba(0, 0, 0, 0.11);
 	text-align:center;
+	float:left;
+	width:100%;
 }
 .footer-text p{
 	font-size:15px;
